--- a/DataRunRun/index-v2.html
+++ b/DataRunRun/index-v2.html
@@ -47,11 +47,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">數據跑跑</a>
+					<a class="navbar-brand" href="#banner">數據跑跑</a>
 				</div>
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#top">TOP</a></li>
+						<li><a href="#banner">top</a></li>
 						<li><a href="#why">為何選跑跑</a></li>
 						<li><a href="#who">跑跑團隊</a></li>
 						<li><a href="#items">跑跑項目</a></li>
@@ -66,7 +66,7 @@
 
 
 		<!-- Top content -->
-		<section class="banner" id="top">
+		<section class="banner" id="banner">
 			<div class="wrapper">
 				<img class="banner-top" src="./img/banner_bottom.png" alt="">
 
