--- a/DataRunRun/index.html
+++ b/DataRunRun/index.html
@@ -733,7 +733,7 @@
 
 
 	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/retina-1.1.0.min.js"></script>
+	<!-- <script src="assets/js/retina-1.1.0.min.js"></script> -->
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/scripts.js"></script>
 
